--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-.App {
+ .App {
   text-align: center;
+  padding: 3rem 5rem;
 }
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
